Pass TEST: takeTurn() and checkforWin() return expected results

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Medieval Role Playing Game</title>
 </head>
 <body>
+  <img src="assets/images/knight.jpeg" alt="knight">
   <!-- Form -->
   <!-- Return Div -->
 </body>
