--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
       <h6 class="text-center display-3">Battle!</h6>
       <h2>It's Player <span id="playerTurn"></span>'s Turn!</h2>
       <br>
-      <button class="btn btn-danger" style="width: 25%">Attack!</button>
+      <button id="attackBtn" class="btn btn-danger" style="width: 25%">Attack!</button>
       <br>
       <!-- Hidden Win Result Div -->
       <div class="card" id="winResultDiv">
-        <h2 class="text-center">Player <span id="winner"></span> WINS!!!</h2>
+        <h2 class="text-center"><span id="winner"></span> WINS!!!</h2>
       </div>
       <br>
       <div class="card-deck">
