--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,11 @@
     <!-- Hidden Battle Div -->
     <div class="card shadow p-4" id="battleDiv">
       <h6 class="text-center display-3">Battle!</h6>
-      <h2>It's Player <span id="playerTurn"></span>'s Turn!</h2>
-      <br>
-      <button id="attackBtn" class="btn btn-danger" style="width: 25%">Attack!</button>
+      <div class="turnDiv">
+        <h2 >It's Player <span id="playerTurn"></span>'s Turn!</h2>
+        <br>
+        <button id="attackBtn" class="btn btn-danger" style="width: 25%">Attack!</button>
+      </div>
       <br>
       <!-- Hidden Win Result Div -->
       <div class="card" id="winResultDiv">
